# annual-medical-cost-ai-system-task6

./: README.md  pyproject.toml
backend/: Dockerfile  main.py
backend/model/: load_model.py  model_scaler_mae.pkl  predict.py
backend/schema/: user_input.py
frontend/: Dockerfile  app.py
